--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,6 @@
+<ngx-spinner type="line-scale-perty">
+  <h3>Loading...</h3>
+</ngx-spinner>
 <app-nav />
 
 <div class="container" style="margin-top: 100px">
