--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -92,8 +92,7 @@
         </form>
       </tab>
       <tab heading="Edit Photos">
-        <h4>Photo edit will go here</h4>
-        <p>{{ member.interests }}</p>
+        <app-photo-editor [member]="member"></app-photo-editor>
       </tab>
     </tabset>
   </div>
