--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -9,7 +9,7 @@
       <li class="list-inline-item">
         <button
           routerLink="/members/{{ member.userName }}"
-          class="btn btn-primary"
+          class="btn btn-primary" 
         >
           <i class="fa fa-user"></i>
         </button>
@@ -20,7 +20,13 @@
         </button>
       </li>
       <li class="list-inline-item">
-        <button class="btn btn-primary"><i class="fa fa-envelope"></i></button>
+        <button
+          routerLink="/members/{{ member.userName }}"
+          [queryParams]="{ tab: 'Messages' }"
+          class="btn btn-primary"
+        >
+          <i class="fa fa-envelope"></i>
+        </button>
       </li>
     </ul>
   </div>
