--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -9,7 +9,7 @@
       <li class="list-inline-item">
         <button
           routerLink="/members/{{ member.userName }}"
-          class="btn btn-primary" 
+          class="btn btn-primary"
         >
           <i class="fa fa-user"></i>
         </button>
@@ -33,7 +33,12 @@
 
   <div class="card-body p-1">
     <h6 class="card-title text-center mb-1">
-      <i class="fa fa-user me-2"> </i>
+      <span
+        [class.is-online]="
+          (presenceService.onlineUsers$ | async)?.includes(member.userName)
+        "
+        ><i class="fa fa-user me-2"> </i
+      ></span>
       {{ member.knownAs }}, {{ member.age }}
     </h6>
     <p class="card-text text-muted text-center">{{ member.city }}</p>
