--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -1,4 +1,4 @@
-<div class="row" >
+<div class="row">
   <div class="col-4">
     <div class="card">
       <img
@@ -7,6 +7,14 @@
         class="card-img-top img-thumbnail"
       />
       <div class="card-body">
+        <div
+          class="mb-2"
+          *ngIf="
+            (presenceService.onlineUsers$ | async)?.includes(member.userName)
+          "
+        >
+          <i class="class fa fa-user-circle text-success"></i>Online now
+        </div>
         <div>
           <strong>Location:</strong>
           <p>{{ member.city }},{{ member.country }}</p>
@@ -17,7 +25,7 @@
         </div>
         <div>
           <strong>Last Active:</strong>
-          <p>{{ member.lastActive + "Z" | timeago }}</p>
+          <p>{{ member.lastActive | timeago }}</p>
         </div>
         <div>
           <strong>Member since:</strong>
@@ -58,10 +66,7 @@
         </gallery>
       </tab>
       <tab heading="Messages" (selectTab)="onTabActivated($event)">
-        <app-member-messages
-          [username]="member.userName"
-          [messages]="messages"
-        ></app-member-messages>
+        <app-member-messages [username]="member.userName"></app-member-messages>
       </tab>
     </tabset>
   </div>
